--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "gulp-babel": "^8.0.0",
     "nib": "^1.1.2"
   }
 }
